--- a/portfolio1/index.html
+++ b/portfolio1/index.html
@@ -16,8 +16,8 @@
     <div class="container">
         <section class="section">
             <h2>About Me</h2>
-            <p>I am a passionate programmer with a strong foundation in web development and software engineering. Proficient in HTML, CSS, Node.js, Data Structures and Algorithms (DSA), and C++, I possess a versatile skill set that enables me to tackle a wide range of technical challenges. With a keen eye for design and a dedication to innovation, I love creating new, attractive, and creative websites. My work is driven by a desire to blend functionality with aesthetics, ensuring that each project not only meets but exceeds user expectations.
-                I am continually exploring new technologies and methodologies to stay at the forefront of the ever-evolving digital landscape. Whether it's developing responsive web applications or crafting elegant solutions to complex problems, my commitment to excellence remains unwavering.</p>
+            <p>I have completed my B.Tech in Information Technology from JECRC in June 2025. I am a passionate programmer with a strong foundation in web development and software engineering. Proficient in HTML, CSS, Node.js, Data Structures and Algorithms (DSA), Database Management System (DBMS), Object-Oriented Programming System (OOPs) and C++, I possess a versatile skill set that enables me to tackle a wide range of technical challenges. With a keen eye for design and a dedication to innovation, I love creating new, attractive, and creative websites. My work is driven by a desire to blend functionality with aesthetics, ensuring that each project not only meets but exceeds user expectations.
+               I am currently learning Salesforce to expand my capabilities in cloud-based solutions and customer relationship management. I am continually exploring new technologies and methodologies to stay at the forefront of the ever-evolving digital landscape. Whether it's developing responsive web applications or crafting elegant solutions to complex problems, my commitment to excellence remains unwavering.</p>
         </section>
 
         <section class="section">
@@ -29,6 +29,8 @@
                 <span class="skill">React</span>
                 <span class="skill">Node.js</span>
                 <span class="skill">C++</span>
+                <span class="skill">MongoDB</span>
+                <span class="skill">ExpressJs</span>
             </div>
         </section>
 
@@ -37,10 +39,9 @@
             <div class="projects">
                 <div class="project">
                     <img src="Weather_pic.jpg" alt="Project 1">
-                    <h3> <a href="https://github.com/harshjain0/WEATHER-WATCH" target="_blank">WEATHER WATCH</a></h3>
+                    <h3> <a href="https://github.com/harshjain0/WEATHER-WATCH" target="_blank" rel="noopener noreferrer">WEATHER WATCH</a></h3>
                     <p>Javascript | Openweather API | CSS | HTML</p>
-                    <p >Built a weather app using Javascript, Openweather API, CSS and HTML.This tool allows user to fetch real time weather data of their currentlocation as well as any other location.</p>
-                    
+                    <p>Built a weather app using JavaScript and OpenWeather API to display real-time weather based on user location or search query. Responsive design included.</p>
                 </div>
                 <div class="project">
                     <img src="Blog_pic.jpg" alt="Project 2">
@@ -55,7 +56,7 @@
 
         <section class="section">
             <h2>Contact</h2>
-            <p>Email: harshjainit25@gmail.com</p>
+            <p>Email: harsh231002@gmail.com</p>
             <p>Phone: (+91) 9602085544</p>
             <p>Location: Rajasthan, India</p>
         </section>
